3.0.8:
  Fix #78, for multiple banks update in monolithic config, if one fails, next banks are not updated
3.0.7:
  Add whatsup support for non proxy config
  Skip bank config with errors
3.0.6:
  Fix logging for monolithic setup
  Add whatsup option
  Fix prometheus stats
3.0.5:
  Fix for python 2.x
3.0.4:
  Fix status page with other services
  Add missing README in package
3.0.3:
  Fix missing parameters
3.0.2:
  Move options to management to utils for reuse
  Fix --about-me
3.0.1:
  Micro service to manage biomaj updates